fix progress bar vertical alignement (height was fixed)

--- a/src/app-ui/progress-bar/progress-bar.component.scss
+++ b/src/app-ui/progress-bar/progress-bar.component.scss
@@ -13,7 +13,7 @@
 .progress-bar {
     /* Level - TimeLine */
     width: 100%;
-    height: 16px;
+    height: 100%;
 
     /* Inside auto layout */
     flex: none;
